@@ -8,11 +8,13 @@ import com.intellij.execution.executors.DefaultRunExecutor;
 import com.intellij.icons.AllIcons;
 import com.intellij.ide.plugins.DynamicPluginListener;
 import com.intellij.ide.plugins.IdeaPluginDescriptor;
+import com.intellij.ide.projectView.PresentationData;
 import com.intellij.ide.util.treeView.NodeDescriptor;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.JBPopupFactory;
 import com.intellij.openapi.util.NlsContexts;
+import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VfsUtilCore;
@@ -25,7 +27,10 @@ import com.intellij.ui.SimpleTextAttributes;
 import com.intellij.ui.tree.AsyncTreeModel;
 import com.intellij.ui.tree.StructureTreeModel;
 import com.intellij.ui.tree.TreeVisitor;
-import com.intellij.ui.treeStructure.*;
+import com.intellij.ui.treeStructure.CachingSimpleNode;
+import com.intellij.ui.treeStructure.SimpleNode;
+import com.intellij.ui.treeStructure.SimpleTree;
+import com.intellij.ui.treeStructure.SimpleTreeStructure;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.containers.ContainerUtil;
@@ -51,7 +56,10 @@ import org.jetbrains.idea.maven.project.MavenProjectsManager;
 import org.jetbrains.idea.maven.statistics.MavenActionsUsagesCollector;
 import org.jetbrains.idea.maven.tasks.MavenShortcutsManager;
 import org.jetbrains.idea.maven.tasks.MavenTasksManager;
-import org.jetbrains.idea.maven.utils.*;
+import org.jetbrains.idea.maven.utils.MavenArtifactUtil;
+import org.jetbrains.idea.maven.utils.MavenPluginInfo;
+import org.jetbrains.idea.maven.utils.MavenUIUtil;
+import org.jetbrains.idea.maven.utils.MavenUtil;
 
 import javax.swing.*;
 import javax.swing.tree.TreePath;
@@ -454,24 +462,24 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
-      setNameAndTooltip(getName(), null);
+    protected void doUpdate(@NotNull PresentationData presentation) {
+      setNameAndTooltip(presentation, getName(), null);
     }
 
-    protected void setNameAndTooltip(String name, @Nullable @NlsContexts.Tooltip String tooltip) {
-      setNameAndTooltip(name, tooltip, (String)null);
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, String name, @Nullable @NlsContexts.Tooltip String tooltip) {
+      setNameAndTooltip(presentation, name, tooltip, (String)null);
     }
 
-    protected void setNameAndTooltip(String name, @Nullable @NlsContexts.Tooltip String tooltip, @Nullable String hint) {
-      setNameAndTooltip(name, tooltip, getPlainAttributes());
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, String name, @Nullable @NlsContexts.Tooltip String tooltip, @Nullable @NlsSafe String hint) {
+      setNameAndTooltip(presentation, name, tooltip, getPlainAttributes());
       if (showDescriptions() && !StringUtil.isEmptyOrSpaces(hint)) {
-        addColoredFragment(" (" + hint + ")", SimpleTextAttributes.GRAY_ATTRIBUTES);
+        presentation.addText(" (" + hint + ")", SimpleTextAttributes.GRAY_ATTRIBUTES);
       }
     }
 
-    protected void setNameAndTooltip(String name, @Nullable @NlsContexts.Tooltip String tooltip, SimpleTextAttributes attributes) {
-      clearColoredText();
-      addColoredFragment(name, prepareAttributes(attributes));
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, @NlsSafe String name, @Nullable @NlsContexts.Tooltip String tooltip, SimpleTextAttributes attributes) {
+      presentation.clearText();
+      presentation.addText(name, prepareAttributes(attributes));
       getTemplatePresentation().setTooltip(tooltip);
     }
 
@@ -592,7 +600,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
     @Override
     protected List<? extends MavenSimpleNode> doGetChildren() {
-      return ContainerUtil.concat(Collections.singletonList(myProfilesNode), new ArrayList<>(super.doGetChildren()));
+      var children = new CopyOnWriteArrayList<MavenSimpleNode>(List.of(myProfilesNode));
+      children.addAll(super.doGetChildren());
+      return children;
     }
 
     public void updateProfiles() {
@@ -601,11 +611,11 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public class ProfilesNode extends GroupNode {
-    private List<ProfileNode> myProfileNodes = new CopyOnWriteArrayList<>();
+    private final List<ProfileNode> myProfileNodes = new CopyOnWriteArrayList<>();
 
     public ProfilesNode(MavenSimpleNode parent) {
       super(parent);
-      setUniformIcon(MavenIcons.ProfilesClosed);
+      getTemplatePresentation().setIcon(MavenIcons.ProfilesClosed);
     }
 
     @Override
@@ -628,7 +638,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         newNodes.add(node);
       }
 
-      myProfileNodes = newNodes;
+      myProfileNodes.clear();
+      myProfileNodes.addAll(newNodes);
       sort(myProfileNodes);
       childrenChanged();
     }
@@ -801,10 +812,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
     @Override
     protected List<? extends MavenSimpleNode> doGetChildren() {
-      return ContainerUtil.concat(
-        Arrays.asList(myLifecycleNode, myPluginsNode, myRunConfigurationsNode, myDependenciesNode),
-        new ArrayList<>(super.doGetChildren())
-      );
+      var children = new CopyOnWriteArrayList<MavenSimpleNode>(List.of(myLifecycleNode, myPluginsNode, myRunConfigurationsNode, myDependenciesNode));
+      children.addAll(super.doGetChildren());
+      return children;
     }
 
     private void updateProject() {
@@ -848,7 +858,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
+    protected void doUpdate(@NotNull PresentationData presentation) {
       String hint = null;
 
       if (!myProjectsNavigator.getGroupModules()
@@ -857,7 +867,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         hint = "root";
       }
 
-      setNameAndTooltip(getName(), myTooltipCache, hint);
+      setNameAndTooltip(presentation, getName(), myTooltipCache, hint);
     }
 
     @Override
@@ -950,10 +960,10 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void setNameAndTooltip(String name, @Nullable String tooltip, SimpleTextAttributes attributes) {
-      super.setNameAndTooltip(name, tooltip, attributes);
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, String name, @Nullable String tooltip, SimpleTextAttributes attributes) {
+      super.setNameAndTooltip(presentation, name, tooltip, attributes);
       if (myProjectsNavigator.getShowVersions()) {
-        addColoredFragment(":" + myMavenProject.getMavenId().getVersion(),
+        presentation.addText(":" + myMavenProject.getMavenId().getVersion(),
                            new SimpleTextAttributes(SimpleTextAttributes.STYLE_PLAIN, JBColor.GRAY));
       }
     }
@@ -1022,7 +1032,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
+    protected void doUpdate(@NotNull PresentationData presentation) {
       String s1 = StringUtil.nullize(myShortcutsManager.getDescription(myMavenProject, myGoal));
       String s2 = StringUtil.nullize(myTasksManager.getDescription(myMavenProject, myGoal));
 
@@ -1037,7 +1047,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         hint = s1 + ", " + s2;
       }
 
-      setNameAndTooltip(getName(), null, hint);
+      setNameAndTooltip(presentation, getName(), null, hint);
     }
 
     @Override
@@ -1155,8 +1165,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
-      setNameAndTooltip(getName(), null, myPluginInfo != null ? myPlugin.getDisplayString() : null);
+    protected void doUpdate(@NotNull PresentationData presentation) {
+      setNameAndTooltip(presentation, getName(), null, myPluginInfo != null ? myPlugin.getDisplayString() : null);
     }
 
     public void updatePlugin(@Nullable MavenPluginInfo newPluginInfo) {
@@ -1229,7 +1239,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
   public abstract class BaseDependenciesNode extends GroupNode {
     protected final MavenProject myMavenProject;
-    private List<DependencyNode> myChildren = new CopyOnWriteArrayList<>();
+    private final List<DependencyNode> myChildren = new CopyOnWriteArrayList<>();
 
     protected BaseDependenciesNode(MavenSimpleNode parent, MavenProject mavenProject) {
       super(parent);
@@ -1292,7 +1302,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         newNodes = new ArrayList<>(myChildren.subList(0, validChildCount));
       }
 
-      myChildren = newNodes;
+      myChildren.clear();
+      myChildren.addAll(newNodes);
       childrenChanged();
     }
 
@@ -1374,19 +1385,19 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
-      setNameAndTooltip(getName(), null, getToolTip());
+    protected void doUpdate(@NotNull PresentationData presentation) {
+      setNameAndTooltip(presentation, getName(), null, getToolTip());
     }
 
     @Override
-    protected void setNameAndTooltip(String name, @Nullable String tooltip, SimpleTextAttributes attributes) {
+    protected void setNameAndTooltip(@NotNull PresentationData presentation, String name, @Nullable String tooltip, SimpleTextAttributes attributes) {
       final SimpleTextAttributes mergedAttributes;
       if (myArtifactNode.getState() == MavenArtifactState.CONFLICT || myArtifactNode.getState() == MavenArtifactState.DUPLICATE) {
         mergedAttributes = SimpleTextAttributes.merge(attributes, SimpleTextAttributes.GRAYED_ATTRIBUTES);
       } else {
         mergedAttributes = attributes;
       }
-      super.setNameAndTooltip(name, tooltip, mergedAttributes);
+      super.setNameAndTooltip(presentation, name, tooltip, mergedAttributes);
     }
 
     private void updateDependency() {
@@ -1492,8 +1503,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    protected void doUpdate() {
-      setNameAndTooltip(getName(),
+    protected void doUpdate(@NotNull PresentationData presentation) {
+      setNameAndTooltip(presentation,
+                        getName(),
                         null,
                         StringUtil.join(((MavenRunConfiguration)mySettings.getConfiguration()).getRunnerParameters().getGoals(), " "));
     }
